--- a/src/components/TitleCardDefault/TitleCardDefault.css
+++ b/src/components/TitleCardDefault/TitleCardDefault.css
@@ -1,9 +1,10 @@
 .main-title {
     font-size: 2.8rem;
     font-weight: 700;
-    color: #2c3e50;
+    color: var(--text-title-color);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-bottom: 30px;
+    margin-top: 0.3rem !important;
+    margin-bottom: 1.5rem !important;
 
     display: flex;
     align-items: center;
