--- a/src/components/TitleCardDefault/TitleCardDefault.css
+++ b/src/components/TitleCardDefault/TitleCardDefault.css
@@ -11,3 +11,9 @@
     justify-content: center;
     gap: 10px;
 }
+
+@media (max-width: 768px) {
+    .main-title {
+        font-size: 2.2rem;
+    }
+}
