--- a/src/pages/TodoEditor/TodoEditor.css
+++ b/src/pages/TodoEditor/TodoEditor.css
@@ -1,6 +1,6 @@
 .btn-delete {
     margin-left: 4px;
-    background-color: #fbfbfb;
+    background-color: transparent;
     color: red;
     border: none;
     cursor: pointer;
