feat: add modal to insert multiple tasks at once

--- a/src/pages/TodoEditor/TodoEditor.css
+++ b/src/pages/TodoEditor/TodoEditor.css
@@ -13,6 +13,16 @@
     color: #af0303;
 }
 
+.btn-purple {
+    background-color: #6f42c1;
+    color: white;
+}
+
+.btn-purple:hover {
+    background-color: #5a32a3;
+    color: white;
+}
+
 .action-buttons {
     display: flex;
     align-items: center;
